--- a/wwwroot/issuer.html
+++ b/wwwroot/issuer.html
@@ -21,6 +21,10 @@
                     <img id="vcLogo" src="logo.png" height=200px; />
                     <h1 id="vcType">NinjaCard Credential Issuance</h1>
                     <h3 id="vcDescription"></h3>
+                    <div id="message-wrapper" class="margin-bottom-75 margin-top-75" style="display: none">
+                        <i class="fas fa-user-check green icon-text-large margin-bottom-25"></i>
+                        <div id="message"></div>
+                    </div>
                     <button type="button" id="sign-in" class="button">GET CREDENTIAL</button>
                     <div id="qrText" style="display:none;">
                         <p class="small-text">
@@ -56,6 +60,34 @@
                                         document.getElementById('sign-in').style.display = "none";
                                     }
                                 })
+
+                            var checkStatus = setInterval(function () {
+                                fetch('api/issuer/issuanceResponse?id=' + respIssuanceReq.id + "&requestId=" + respIssuanceReq.requestId)
+                                    .then(response => response.text())
+                                    .catch(error => document.getElementById("message").innerHTML = error)
+                                    .then(response => {
+                                        if (response.length > 0) {
+                                            console.log(response)
+                                            respMsg = JSON.parse(response);
+                                            document.getElementById('message-wrapper').style.display = "block";
+                                            document.getElementById('qrText').style.display = "none";
+                                            document.getElementById('qrcodeFrame').style.display = "none";
+                                            document.getElementById('qrcode').style.display = "none";
+                                            document.getElementById('sign-in').textContent = 'Verify Again';
+                                            // respMsg.status == 1 -> QR Code scanned
+                                            if (respMsg.status == 1) {
+                                                document.getElementById('message').innerHTML = respMsg.message;
+                                                clearInterval(checkStatus);
+                                            }
+                                            // respMsg.status == 2 -> VC presented and validated
+                                            if (respMsg.status == 2) {
+                                                document.getElementById('message').innerHTML = respMsg.message + " validated successfully as " + cardTitle;
+                                                clearInterval(checkStatus);
+                                            }
+                                        }
+                                    })
+                            }, 3000);
+
                         })
 
                         fetch('api/issuer/echo')
