--- a/wwwroot/issuer.html
+++ b/wwwroot/issuer.html
@@ -36,6 +36,7 @@
                     <div id="qrcodeFrame" style="background:white;display:none">
                         <div id="qrcode" style="text-align: center; padding:25px"></div>
                     </div>
+                    <div id="pinCodeText" style="display: none"></div>
 
                     <script src="qrcode.min.js"></script>
                     <script>
@@ -56,8 +57,12 @@
                                         qrcode.makeCode(respIssuanceReq.url);
                                         document.getElementById('qrText').style.display = "block";
                                         document.getElementById('qrcodeFrame').style.display = "block";
-                                        document.getElementsByTagName("img")[2].src = respPresReq.qrCode;
+                                        document.getElementsByTagName("img")[2].src = respIssuanceReq.qrCode;
                                         document.getElementById('sign-in').style.display = "none";
+                                        if (respIssuanceReq.pin) {
+                                            document.getElementById('pinCodeText').innerHTML = "Pin code: " + respIssuanceReq.pin;
+                                            document.getElementById('pinCodeText').style.display = "block";
+                                        }
                                     }
                                 })
 
