--- a/wwwroot/issuer.html
+++ b/wwwroot/issuer.html
@@ -94,7 +94,7 @@
                                 })
 
                             var checkStatus = setInterval(function () {
-                                fetch('api/issuer/issue-response?id=' + respIssuanceReq.id + "&requestId=" + respIssuanceReq.requestId)
+                                fetch('api/issuer/issue-response?id=' + respIssuanceReq.id )
                                     .then(response => response.text())
                                     .catch(error => document.getElementById("message").innerHTML = error)
                                     .then(response => {
