--- a/wwwroot/verifier.html
+++ b/wwwroot/verifier.html
@@ -15,7 +15,7 @@
             <div id="wrap">
                 <center><h3>DotNet Client API VC Verifier Version</h3></center>
                 <div style="text-align: center;">
-                    <img id="vcLogo" src="logo.png" height=200px; />
+                    <img id="vcLogo" src="api/verifier/logo.png" height=200px; />
                     <h1 id="vcType">NinjaCredential Verification</h1>
                     <h3 id="vcDescription"></h3>
                     <div id="message-wrapper" class="margin-bottom-75 margin-top-75" style="display: none">
@@ -51,7 +51,7 @@
                                     if (response.length > 0) {
                                         console.log(response)
                                         respPresReq = JSON.parse(response);
-                                        qrcode.makeCode(respPresReq.link);
+                                        qrcode.makeCode(respPresReq.url);
                                         document.getElementById('qrText').style.display = "block";
                                         document.getElementById('qrcodeFrame').style.display = "block";
                                         document.getElementsByTagName("img")[2].src = respPresReq.qrCode;
