--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -15,7 +15,7 @@
             <div id="wrap">
                 <center><h3>DotNet Client API VC Version</h3></center>
                 <div style="text-align: center;">
-                    <img id="vcLogo" src="logo.png" height=200px; />
+                    <img id="vcLogo" src="api/issuer/logo.png" height=200px; />
                     <h1 id="vcType">NinjaCredential Verification</h1>
                     <h3 id="vcDescription"></h3>
                     <div id="message-wrapper" class="margin-bottom-75 margin-top-75" style="display: none">
